--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>LIUM GO</title>
 
     <!-- Fav Icon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"> -->
 
     <!-- Google Fonts -->
     <link
@@ -179,7 +179,7 @@
                 <ul>
                     <li>Chicago 12, Melborne City, USA</li>
                     <li><a href="tel:+8801682648101">+88 01682648101</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                 </ul>
             </div> -->
             <div class="social-links">
@@ -227,14 +227,15 @@
                         <div class="content-box">
                             <div class="sec-title wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <p>About LIUM GO</p>
-                                <h2>LIUM GO Provides <span style="color: #92de90;">CNG</span> Based Delivery Service.
+                                <h2>LIUM GO Provides <span style="color: #92de90;">EV</span> Based Delivery Service.
                                 </h2>
                             </div>
                             <div class="text wow slideInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
-                                <p>Lium Go specializes in conquering the logistical challenges presented by diverse
-                                    terrains and remote regions, offering exceptional last-mile delivery services. With
-                                    a handpicked fleet of eco-friendly electric 2 and 3 wheelers, we ensure efficient,
-                                    sustainable deliveries around the clock.</p>
+                                <p>Lium Go is a pioneer in the field of Green Mobility solutions. Our dedication extends
+                                    above and beyond the usual, as we provide innovative and sustainable transportation
+                                    solutions to both consumers and companies alike. We actively contribute to the
+                                    reduction of carbon footprints and the preservation of our planet's valuable
+                                    resources by doing so.</p>
                             </div>
                             <ul class="list-item clearfix wow slideInUp" data-wow-delay="600ms"
                                 data-wow-duration="1500ms">
@@ -260,9 +261,11 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 inner-column">
                     <div class="inner-box wow fadeInLeft" data-wow-delay="200ms" data-wow-duration="1500ms">
                         <h3>Our Mission</h3>
-                        <p>At LIUM GO, we're on a mission to revolutionize last-mile logistics using eco-friendly
-                            electric vehicles. Our commitment to sustainability drives us to deliver efficient,
-                            reliable, and green solutions, creating a cleaner and brighter future for all.</p>
+                        <p>Our primary goal is to reshape the landscape of last-mile delivery. With a forward-thinking
+                            strategy, we have effortlessly incorporated electric mobility into the heart of delivery
+                            operations. Our fleet of cutting-edge e-mobility vehicles has transformed the way hyperlocal
+                            operations are carried out, assuring efficiency and environmental friendliness at every
+                            step.</p>
                         <ul class="list-item">
                             <li>Efficient Electric Fleet.</li>
                             <li>Diverse Solutions.</li>
@@ -273,10 +276,11 @@
                     <div class="inner-box wow fadeInRight" data-wow-delay="200ms" data-wow-duration="1500ms">
                         <h3>Our Vision</h3>
                         <div class="text">
-                            <p>Our vision at LIUM GO is to lead the charge in sustainable last-mile logistics. We
-                                envision a future where our electric three-wheelers redefine urban mobility, reducing
-                                emissions, congestion, and promoting cleaner, healthier communities. By innovating with
-                                advanced technology and fostering collaborations.</p>
+                            <p>Lium Go, specializes in providing exceptional last-mile logistics services that overcome
+                                the challenges posed by the country's complex geographical diversity, difficult
+                                terrains, and remote, unmapped areas.Our dedication to quality in the last mile delivery
+                                sector distinguishes us, and we understand the importance of this final leg in the
+                                logistical journey.</p>
                         </div>
                     </div>
                 </div>
@@ -334,11 +338,9 @@
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div id="image_block_07">
                         <div class="image-box wow slideInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
-                            <!-- <figure class="image js-tilt"><img src="assets/images/IElum/6.jpg" alt="">
-                            </figure> -->
-                            <video autoplay="true" loop="true" style="height: auto; width: 100%;">
+                            <!-- <video autoplay="true" loop="true" style="height: auto; width: 100%;">
                                 <source src="./assets/images/IElum/video2.mp4">
-                            </video>
+                            </video> -->
                         </div>
                     </div>
                 </div>
@@ -370,8 +372,8 @@
                                     </ul>
                                 </figure>
                                 <div class="lower-content">
-                                    <h3><a href="about.html">Nicolas Lawson</a></h3>
-                                    <span class="designation">Founder & CEO</span>
+                                    <h3><a href="about.html">Sakshi</a></h3>
+                                    <span class="designation">Founder</span>
                                 </div>
                             </div>
                         </div>
@@ -389,8 +391,8 @@
                                     </ul>
                                 </figure>
                                 <div class="lower-content">
-                                    <h3><a href="about.html">Gwen Johnson</a></h3>
-                                    <span class="designation">Designer</span>
+                                    <h3><a href="about.html">Sangita Kashyap</a></h3>
+                                    <span class="designation">Co-Founder</span>
                                 </div>
                             </div>
                         </div>
@@ -408,12 +410,73 @@
                                     </ul>
                                 </figure>
                                 <div class="lower-content">
-                                    <h3><a href="about.html">Thomas Olsen</a></h3>
-                                    <span class="designation">Regional Leader</span>
+                                    <h3><a href="about.html">Akshay Gupta</a></h3>
+                                    <span class="designation">Sr. Vice President Operation</span>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="inner-content mt-md-5">
+                <div class="row clearfix">
+                    <div class="col-lg-4 col-md-6 col-sm-12 team-block">
+                        <div class="team-block-one wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/team/team-1.jpg" alt="">
+                                    <ul class="social-links">
+                                        <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-vimeo-v"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-linkedin-in"></i></a></li>
+                                    </ul>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="about.html">Abhishek</a></h3>
+                                    <span class="designation">Sales Head</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 team-block">
+                        <div class="team-block-one wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/team/team-2.jpg" alt="">
+                                    <ul class="social-links">
+                                        <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-vimeo-v"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-linkedin-in"></i></a></li>
+                                    </ul>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="about.html">Nimisha Kashyap</a></h3>
+                                    <span class="designation">HR Head</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 team-block">
+                        <div class="team-block-one wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/team/team-3.jpg" alt="">
+                                    <ul class="social-links">
+                                        <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-vimeo-v"></i></a></li>
+                                        <li><a href="about.html"><i class="fab fa-linkedin-in"></i></a></li>
+                                    </ul>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="about.html">Akshay Gupta</a></h3>
+                                    <span class="designation">Sr. Vice President Operation</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -448,8 +511,8 @@
                                 <figure class="footer-logo"><a href="index.html"><img src="assets/images/IElum/6.jpg"
                                             alt=""></a></figure>
                                 <div class="text">
-                                    <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
-                                        labore dolore.</p>
+                                    <!-- <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
+                                        labore dolore.</p> -->
                                 </div>
                             </div>
                         </div>
@@ -492,9 +555,9 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul>
-                                        <li>Flat 20, Reynolds Neck, North Hele naville, FV77 8WS</li>
-                                        <li><a href="tel:23055873407">+2(305) 587-3407</a></li>
-                                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                                        <li>Leela Tower, Sonagiri Square, Bhopal, Madhya Pradesh - 462022</li>
+                                        <li><a href="tel:23055873407">+91 62636 82856</a></li>
+                                        <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                                     </ul>
                                 </div>
                                 <ul class="social-links clearfix">
