--- a/b1.html
+++ b/b1.html
@@ -9,7 +9,7 @@
    <title>Livinart Technologies</title>
 
     <!-- Fav Icon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"> -->
 
     <!-- Google Fonts -->
     <link
@@ -248,7 +248,7 @@
                 <ul>
                     <li>Chicago 12, Melborne City, USA</li>
                     <li><a href="tel:+8801682648101">+88 01682648101</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                 </ul>
             </div>
             <div class="social-links">
@@ -690,8 +690,8 @@
                                 <figure class="footer-logo"><a href="index.html"><img
                                             src="assets/images/logo.svg" style="zoom: 1.5;" alt=""></a></figure>
                                 <div class="text">
-                                    <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
-                                        labore dolore.</p>
+                                    <!-- <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
+                                        labore dolore.</p> -->
                                 </div>
                             </div>
                         </div>
