--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <title>LIUM GO</title>
 
     <!-- Fav Icon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"> -->
 
     <!-- Google Fonts -->
     <link
@@ -143,7 +143,7 @@
                 <ul>
                     <li>Chicago 12, Melborne City, USA</li>
                     <li><a href="tel:+8801682648101">+88 01682648101</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                 </ul>
             </div> -->
             <div class="social-links">
@@ -227,7 +227,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 form-column">
                     <div class="form-inner">
-                        <h3>Let’s Conversation<br />with Livinart</h3>
+                        <h3>Let’s Connect<br />with <span class="dark-green">Liam Go</span></h3>
                         <form method="post" action="assets/inc/sendemail.php" id="contact-form" class="default-form">
                             <div class="row clearfix">
                                 <div class="col-lg-6 col-md-6 col-sm-12 form-group">
@@ -286,8 +286,8 @@
                                 <figure class="footer-logo"><a href="index.html"><img src="assets/images/IElum//6.jpg"
                                             style="zoom: 1.5;" alt=""></a></figure>
                                 <div class="text">
-                                    <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
-                                        labore dolore.</p>
+                                    <!-- <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
+                                        labore dolore.</p> -->
                                 </div>
                             </div>
                         </div>
