--- a/feature-element-2.html
+++ b/feature-element-2.html
@@ -8,7 +8,7 @@
 <title>Detox - HTML 5 Template Preview</title>
 
 <!-- Fav Icon -->
-<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+<!-- <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"> -->
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
@@ -240,7 +240,7 @@
                 <ul>
                     <li>Chicago 12, Melborne City, USA</li>
                     <li><a href="tel:+8801682648101">+88 01682648101</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                 </ul>
             </div>
             <div class="social-links">
@@ -396,9 +396,9 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul>
-                                        <li>Flat 20, Reynolds Neck, North Hele naville, FV77 8WS</li>
-                                        <li><a href="tel:23055873407">+2(305) 587-3407</a></li>
-                                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                                        <li>Leela Tower, Sonagiri Square, Bhopal, Madhya Pradesh - 462022</li>
+                                        <li><a href="tel:23055873407">+91 62636 82856</a></li>
+                                        <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                                     </ul>
                                 </div>
                                 <ul class="social-links clearfix">
