--- a/maintaince.html
+++ b/maintaince.html
@@ -9,7 +9,7 @@
     <title>Livinart Technologies</title>
 
     <!-- Fav Icon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"> -->
 
     <!-- Google Fonts -->
     <link
@@ -385,8 +385,8 @@ h1#headline {
                                 <figure class="footer-logo"><a href="index.html"><img
                                             src="assets/images/logo.svg" style="zoom: 1.5;" alt=""></a></figure>
                                 <div class="text">
-                                    <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
-                                        labore dolore.</p>
+                                    <!-- <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
+                                        labore dolore.</p> -->
                                 </div>
                             </div>
                         </div>
