--- a/electric-fleet.html
+++ b/electric-fleet.html
@@ -9,7 +9,7 @@
     <title>LIUM GO</title>
 
     <!-- Fav Icon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"> -->
 
     <!-- Google Fonts -->
     <link
@@ -152,7 +152,7 @@
                 <ul>
                     <li>Chicago 12, Melborne City, USA</li>
                     <li><a href="tel:+8801682648101">+88 01682648101</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                 </ul>
             </div> -->
             <div class="social-links">
@@ -196,7 +196,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success" style="align-items: end;">Book Now</a>
+                    <a href="#" class="btn btn-success" style="align-items: end;">Connect Now</a>
                 </div>
             </div>
         </div>
@@ -210,7 +210,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success">Book Now</a>
+                    <a href="#" class="btn btn-success">Connect Now</a>
                 </div>
             </div>
         </div>
@@ -224,7 +224,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success">Book Now</a>
+                    <a href="#" class="btn btn-success">Connect Now</a>
                 </div>
             </div>
         </div>
@@ -238,7 +238,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success">Book Now</a>
+                    <a href="#" class="btn btn-success">Connect Now</a>
                 </div>
             </div>
         </div>
@@ -258,8 +258,8 @@
                                 <figure class="footer-logo"><a href="index.html"><img src="assets/images/IElum/6.jpg"
                                             alt=""></a></figure>
                                 <div class="text">
-                                    <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
-                                        labore dolore.</p>
+                                    <!-- <p>Lorem ipsum dolor amet consectetur adipielit sed eiusm tempor incididunt ut
+                                        labore dolore.</p> -->
                                 </div>
                             </div>
                         </div>
@@ -302,9 +302,9 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul>
-                                        <li>Flat 20, Reynolds Neck, North Hele naville, FV77 8WS</li>
-                                        <li><a href="tel:23055873407">+2(305) 587-3407</a></li>
-                                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                                        <li>Leela Tower, Sonagiri Square, Bhopal, Madhya Pradesh - 462022</li>
+                                        <li><a href="tel:23055873407">+91 62636 82856</a></li>
+                                        <li><a href="mailto:sakshi@liumgo.com">sakshi@liumgo.com</a></li>
                                     </ul>
                                 </div>
                                 <ul class="social-links clearfix">
