--- a/electric-fleet.html
+++ b/electric-fleet.html
@@ -196,7 +196,10 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success" style="align-items: end;">Connect Now</a>
+                    <a href="https://forms.gle/N9wHxXHhg1qDYgBZA" class="btn btn-success"
+                        style="align-items: end;">Connect Now</a>
+                    <!-- <a href="#" class="btn btn-primary" style="align-items: end;">Edit</a>
+                    <a href="#" class="btn btn-danger" style="align-items: end;">Delete</a> -->
                 </div>
             </div>
         </div>
@@ -210,7 +213,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success">Connect Now</a>
+                    <a href="https://forms.gle/N9wHxXHhg1qDYgBZA" class="btn btn-success">Connect Now</a>
                 </div>
             </div>
         </div>
@@ -224,7 +227,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success">Connect Now</a>
+                    <a href="https://forms.gle/N9wHxXHhg1qDYgBZA" class="btn btn-success">Connect Now</a>
                 </div>
             </div>
         </div>
@@ -238,7 +241,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias delectus
                         doloremque perspiciatis quod, ad suscipit quae consequatur iusto sed exercitationem explicabo
                         voluptatum ex alias nisi dolorem, optio quasi ipsa?</p>
-                    <a href="#" class="btn btn-success">Connect Now</a>
+                    <a href="https://forms.gle/N9wHxXHhg1qDYgBZA" class="btn btn-success">Connect Now</a>
                 </div>
             </div>
         </div>
