--- a/job-details.html
+++ b/job-details.html
@@ -239,7 +239,7 @@
 
                 </p>
 
-                <a href="#" class="btn btn-success mt-5">Apply Now</a>
+                <a href="https://forms.gle/KcuADWEXmqGfdByS7" class="btn btn-success mt-5">Apply Now</a>
             </div>
         </div>
     </div>
